Completed. Server needs to be tested.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -91,8 +91,8 @@ task run(type: Exec) {
 
 dependencies {
     implementation 'androidx.core:core:1.7.0'
+    //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.0.0'
-    implementation files('lib/kryonet-2.21-all.jar')
 }
 
 
