--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.quintus_cult.nhs_coordinator.main" >
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:isGame="true"
         android:appCategory="game"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
+
         <activity
             android:name="com.github.quintus_cult.nhs_coordinator.main.AndroidLauncher"
             android:label="@string/app_name" 
